first draft with images

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>WordStream</title>
+	<title>Lubricants</title>
 	<meta name ="description" content="A really cool site!">
 	<link rel ="stylesheet" type="text/css" href="css_lubricants.css">
 	<script type="text/javascript" src="my_javascript_file.js"></script>
@@ -10,27 +10,60 @@
 <body>
 	<div id="container">
 		<div id="top-bar">
+			<img src="logo.png" class="logo">
+			<h2 class="phone">CALL TOLL FREE 1-800-772-5823</h2>
+			<ul class="navbar">
+				<li><a href="">HOME</a></li>
+				<li><a href="">MARKET SEGMENTS</a></li>
+				<li><a href="">SERVICES</a></li>
+				<li><a href="">PRODUCTS</a></li>
+				<li><a href="">PROMOTIONS</a></li>
+				<li><a href="">MARKET AREA</a></li>
+				<li><a href="">MARKET INFORMATION</a></li>
+			</ul>
+
+
 		</div>
 		<div id="middle-content">
+			<img src="factory.png" class="bigphoto">
+			<div class="about">
+				<h4>About PPC Lubricants</h4>
+				<h5>A Heritage of Specializing in Lubricants</h5>
+				<p>For Over 40 years, <span>PPC Lubricants</span>has earned a solid reputation for offering high quality products and services that improve your business. How? By providing customer retention programs/products for installers and products and services that increase equipment life and enhance the efficiency of all equipment whether it be <span>Automotive, Heavy Duty Commericial or Industrial</span>in its application</p>
+				<p>At <span>PPC Lubricants</span>, we take tremenduous pride in providing the highest level of Service. When you call our toll free numbers you will be greeted by a staff that is knowledgable and experienced in the various lubricants that we carry. Each customer service representative receives industry specific training on the lateset advancements in <span>lubrication technology</span>including changing equipment and OEM requirements</p>
+
+			</div>
+			<img src="babypic.png" class="baby">
+			<h6>PPC now has Bulk Delivery/Squirt Fill capabilities for DEF</h6>
 		</div>
 		<div id="bottom-content">
 			<div class="box">
+				<h4>AUTOMOTIVE</h4>
+				<img src="automotive.png">
+				<p>The Automotive Market requires a different set of tools in order to succeed. PPC lubricants offers various programs that are cusotmized to each customer in</p>
+				<button>READ MORE</button>
 			</div>
 			<div class="box">
+				<h4>COMMERCIAL</h4>
+				<img src="commercial.png">
+				<p>PPC Lubricants has been in business of supporting the Commercial market for over 40 years! The most important thing that we learned is that...</p>
+				<button>READ MORE</button>
 			</div>
 			<div class="box">
+				<h4>INDUSTRIAL</h4>
+				<img src="industrial.png">
+				<p>Regardless of the industrial market segment that you operate in: Metal, Forestry, Gas or Power Production, Foods, Plastics or almost any other field, your lubricant</p>
+				<button>READ MORE</button>
 			</div>
 			<div class="box">
+				<h4>DIESEL EXHAUST FLUID</h4>
+				<img src="def.png">
+				<p>As a governmental regulations on emissions from diesel engines become more severe, it has forced vehicle manufacturers to evaluate and adopt new technologies in order to....</p>
+				<button>READ MORE</button>
 			</div>
 
 		</div>
 	</div>
-
-
-
-
-
-
 
 </body>
 </html>
